# MKZenith

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVENANT.md  DIAGNOSIS.md  LICENSE.md  LilithOS_KernalInit.sh  MIGRATION_NOTES.md  README.md  SECURITY.md  THE_LAST_WHISPER.md  app.py  config.py  drive.py  lilybear_google_sync.py  mkdocs.yml  pyproject.toml  requirements.txt  sentiment.py  storage.py  transcription.py
"b/: LICENSE.v\342\210\236"
.github/workflows/: ci.yml
docs/: index.md
docs/development/: setup.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/usage/: api.md
gamedin/: hub.json
tests/: test_app.py  test_drive.py  test_storage.py  test_transcription.py
