[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=./ --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[bandit]
targets = ["."]
skips = ["B101"]
exclude_dirs = ["tests", "venv", ".git", "__pycache__"]

[tool.ruff]
line-length = 127
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "PL", # pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long - handled by black
    "E203",  # whitespace before ':' - not PEP 8 compliant
]

[project]
name = "mkzenith"
version = "0.1.0"
description = "Lilybear Google Sync - FastAPI microservice for voice journaling with Google Cloud and Gemini AI"
authors = [
    { name = "MKWorldWide", email = "info@mkworldwide.ai" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/MKWorldWide/MKZenith"
Documentation = "https://mkworldwide.github.io/MKZenith/"
Repository = "https://github.com/MKWorldWide/MKZenith"
Changelog = "https://github.com/MKWorldWide/MKZenith/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pre-commit>=3.0.0",
]
